hydra/test/test_examples/type_errors/local_dec_for2.tpc
tele bool[10] l;
init {
   for (x in l) {
      bool x = true;
   }
} 
telemetry {} 
check {}